--- a/index.html
+++ b/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
 
-  </body>
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="sedona-logo">
+        <img src="img/index-logo.svg" width="135" height="70" alt="Логотип города Седона">
+      </a>
+      <ul class="site-navigation">
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="materials.html">Фото и видео</a></li>
+        <li><a href="map.html">Карта штата</a></li>
+        <li><a href="hotels.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="container">
+
+    <h1 class="visually-hidden">Добро пожаловать в город Седона</h1>
+
+    <div class="welcome-sedona">
+      <!-- Картинка - фоновое изображение -->
+      <h2 class="about-sedona">Седона — небольшой городок в Аризоне,заслуживающий большего!</h2>
+      <p class="features">Рассмотрим 5 причин, по которым Седона круче, чем Гранд каньон!</p>
+    </div>
+
+    <!--Причины В <section></section>-->
+
+    <section class="search">
+      <h3>Заинтересовались?</h3>
+      <p class="search-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <!--Форма поиска гостиницы-->
+      <p><img src="map.jpg" width="1200" height="600" alt="Карта"></p>
+      <!--По ТЗ вместо карты - картинка-->
+    </section>
+  </main>
+
+  <footer class="main-footer">
+    <p class="tag">#Visitsedona<p>
+
+    <div class="footer-cocial">
+      <ul>
+        <li><a class="social-button" href="#">Twitter</a></li>
+        <li><a class="social-button" href="#">Facebook</a></li>
+        <li><a class="social-button" href="#">Youtube</a></li>
+      </ul>
+    </div>
+
+    <p class="depeloper">
+      <b>Website by</b>
+      <a class="social-button" href="https://htmlacademy.ru/intensive/htmlcss">HTMLAcademy</a>
+    </p>
+  </footer>
+</body>
+
 </html>
