Внёс изменения в соответствии с замечаниями

--- a/hotels.html
+++ b/hotels.html
@@ -16,7 +16,7 @@
         <li><a href="info.html">Информация</a></li>
         <li><a href="materials.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
-        <li class="site-navigation-current"><a href="hotels.html">Гостиницы</a></li>
+        <li class="site-navigation-current">Гостиницы</li>
       </ul>
     </nav>
   </header>
@@ -34,39 +34,52 @@
 
       <ul class="catalog-list">
         <li class="catalog-hotel">
-          <h3>Amara Resort & Spa</h3>
-          <p class="catalog-hotel-image">
-            <img src="img/hotel-1.jpg" width="150" height="100" alt="Фото отеля «Amara Resort & Spa»">
-          </p>
-          <p class="catalog-hotel-type">Гостиница</p>
-          <p class="catalog-hotel-price">От 4000 Р.</p>
-          <a class="button button-more" href="#">Подробнее</a>
-          <a class="button button-order" href="#">Забронировать</a>
-          <p class="rating">Рейтинг: 8,5</p>
+          <article class="card-hotel">
+            <h1><a class="hotel-name" href="#">Amara Resort & Spa</a></h1>
+            <div class="catalog-hotel-image">
+              <img src="img/hotel-1.jpg" width="150" height="100" alt="Фото отеля «Amara Resort & Spa»">
+            </div>
+            <span class="catalog-hotel-type">Гостиница</span>
+            <span class="catalog-hotel-price">От 4000 Р.</span>
+            <a class="button button-more" href="#">Подробнее</a>
+            <a class="button button-order" href="#">Забронировать</a>
+            <div class="rating">
+              <span>Рейтинг: 8,5</span>
+            </div>
+          </article>
         </li>
 
         <li class="catalog-hotel">
-          <h3>Desert Quail Inn</h3>
-          <p class="catalog-hotel-image">
-            <img src="img/hotel-2.jpg" width="150" height="100" alt="Фото отеля «Desert Quail Inn»">
-          </p>
-          <p class="catalog-hotel-type">Мотель</p>
-          <p class="catalog-hotel-price">От 3000 Р.</p>
-          <a class="button button-more" href="#">Подробнее</a>
-          <a class="button button-order" href="#">Забронировать</a>
-          <p class="rating">Рейтинг: 8,9</p>
+          <article class="card-hotel">
+            <h1><a class="hotel-name" href="#">Desert Quail Inn</a></h1>
+            <div class="catalog-hotel-image">
+              <img src="img/hotel-2.jpg" width="150" height="100" alt="Фото отеля «Desert Quail Inn»">
+            </div>
+            <span class="catalog-hotel-type">Мотель</span>
+            <span class="catalog-hotel-price">От 3000 Р.</span>
+            <a class="button button-more" href="#">Подробнее</a>
+            <a class="button button-order" href="#">Забронировать</a>
+            <div class="rating">
+              <span>Рейтинг: 8,9</span>
+            </div>
+          </article>
         </li>
 
         <li class="catalog-hotel">
-          <h3>Villas at Poco Diablo</h3>
-          <p class="catalog-hotel-image">
-            <img src="img/hotel-3.jpg" width="150" height="100" alt="Фото отеля «Villas at Poco Diablo»">
-          </p>
-          <p class="catalog-hotel-type">Гостиница</p>
-          <p class="catalog-hotel-price">От 2000 Р.</p>
-          <a class="button button-more" href="#">Подробнее</a>
-          <a class="button button-order" href="#">Забронировать</a>
-          <p class="rating">Рейтинг: 9,2</p>
+
+          <article class="card-hotel">
+            <h1><a class="hotel-name" href="#">Villas at Poco Diablo</a></h1>
+            <div class="catalog-hotel-image">
+              <img src="img/hotel-3.jpg" width="150" height="100" alt="Фото отеля «Villas at Poco Diablo»">
+            </div>
+            <span class="catalog-hotel-type">Гостиница</span>
+            <span class="catalog-hotel-price">От 2000 Р.</span>
+            <a class="button button-more" href="#">Подробнее</a>
+            <a class="button button-order" href="#">Забронировать</a>
+            <div class="rating">
+              <span>Рейтинг: 9,2</span>
+            </div>
+          </article>
         </li>
       </ul>
     </section>
