--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
       <h3>Заинтересовались?</h3>
       <p class="search-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <!--Форма поиска гостиницы-->
-      <p><img src="map.jpg" width="1200" height="600" alt="Карта"></p>
+      <img src="map.jpg" width="1200" height="600" alt="Карта">
       <!--По ТЗ вместо карты - картинка-->
     </section>
   </main>
 
   <footer class="main-footer">
-    <p class="tag">#Visitsedona<p>
+    <div class="tag">
+      <a href="#">#Visitsedona</a>
+    </div>
 
-    <div class="footer-cocial">
+    <div class="footer-social">
       <ul>
         <li><a class="social-button" href="#">Twitter</a></li>
         <li><a class="social-button" href="#">Facebook</a></li>
@@ -53,10 +55,10 @@
       </ul>
     </div>
 
-    <p class="depeloper">
+    <div class="depeloper">
       <b>Website by</b>
       <a class="social-button" href="https://htmlacademy.ru/intensive/htmlcss">HTMLAcademy</a>
-    </p>
+    </div>
   </footer>
 </body>
 
