Внёс изменения по повторным замечаниям
Одну ссылку сделал с классом current, потому что она по стиль-гайду активна, т.е. она в нажатом состоянии. Если не так - уже изменю со следующим ПР.

--- a/hotels.html
+++ b/hotels.html
@@ -71,8 +71,8 @@
       </div>
 
       <ul>
-        <li><button type="button" name="button button-sorting-up">Сортировка вверх</button></li>
-        <li><button type="button" name="button button-sorting-down">Сортировка вниз</button></li>
+        <li><a class="sorting-up " href="#">Сортировка вверх</a></li>
+        <li><a class="sorting-down current" >Сортировка вниз</a></li>
       </ul>
     </section>
 
