--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <section class="feature-true">
       <h3>Настоящий городок</h3>
-      <span class="feature-number">№1</span>
+      <span class="feature-number"> — №1 — </span>
       <p class="answer">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       <div class="image-city">
         <img src="img/street-sedona.jpg" width="800" height="256" alt="Улица города Седона">
@@ -61,7 +61,7 @@
 
     <section class="feature-bridge">
       <h3>Там есть Мост дьявола</h3>
-      <span class="feature-number">№2</span>
+      <span class="feature-number"> — №2 — </span>
       <p class="answer">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       <div class="image-bridge">
         <img src="img/devil-bridge.jpg" width="800" height="256" alt="Легендарный Мост дьявола">
@@ -72,17 +72,17 @@
       <ul class="features-list">
         <li>
           <h3>Небольшая площадь</h3>
-          <span class="feature-number">№3</span>
+          <span class="feature-number"> — №3 — </span>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
         <li>
           <h3>Красивая дорога</h3>
-          <span class="feature-number">№4</span>
+          <span class="feature-number"> — №4 — </span>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
         <li>
           <h3>Мало туристов</h3>
-          <span class="feature-number">№5</span>
+          <span class="feature-number"> — №5 — </span>
           <p>Большинство едет в гранд каньон и толпится там</p>
         </li>
       </ul>
@@ -141,13 +141,12 @@
           </button>
         </div>
 
-        <div class="button-search">
-          <input type="submit" name="search" value="Найти">
-        </div>
+        <input class="button-search" type="submit" name="search" value="Найти">
+
       </form>
 
-      <img src="map.jpg" width="1200" height="600" alt="Карта">
-      <!--По ТЗ вместо карты - картинка-->
+      <img src="img/map-sedona.jpg" width="1200" height="600" alt="Карта проезда к городу Седона">
+
     </section>
   </main>
 
