--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body>
   <header class="main-header">
     <nav class="main-navigation">
-      <a class="sedona-logo">
-        <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
-      </a>
       <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
         <li><a href="materials.html">Фото и видео</a></li>
+        <li>
+          <a class="sedona-logo">
+            <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
+          </a>
+        </li>
         <li><a href="map.html">Карта штата</a></li>
         <li><a href="hotels.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
-
   <main class="container">
 
     <h1 class="visually-hidden">Добро пожаловать в город Седона</h1>
 
     <div class="welcome-sedona">
-      <!-- Картинка - фоновое изображение -->
-      <div class="about-sedona">
+      <div class="container-white">
         <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд каньон!</p>
       </div>
@@ -39,9 +39,11 @@
     <h2 class="visually-hidden">Причины посетить город "Седона"</h2>
 
     <section class="feature-true">
-      <h3>Настоящий городок</h3>
-      <span class="feature-number"> — №1 — </span>
-      <p class="answer">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+      <div class="about-true">
+        <h3>Настоящий городок</h3>
+        <span class="feature-number"> — №1 — </span>
+        <p class="answer">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+      </div>
       <div class="image-city">
         <img src="img/street-sedona.jpg" width="800" height="256" alt="Улица города Седона">
       </div>
@@ -65,9 +67,11 @@
     </section>
 
     <section class="feature-bridge">
-      <h3>Там есть Мост дьявола</h3>
-      <span class="feature-number"> — №2 — </span>
-      <p class="answer">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      <div class="about-bridge">
+        <h3>Там есть Мост дьявола</h3>
+        <span class="feature-number"> — №2 — </span>
+        <p class="answer">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      </div>
       <div class="image-bridge">
         <img src="img/devil-bridge.jpg" width="800" height="256" alt="Легендарный Мост дьявола">
       </div>
