--- a/hotels.html
+++ b/hotels.html
@@ -10,16 +10,15 @@
 </head>
 
 <body>
+  <div class="container-width">
   <header class="main-header">
     <nav class="main-navigation">
+      <a class="sedona-logo" href="index.html">
+        <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
+      </a>
       <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
         <li><a href="materials.html">Фото и видео</a></li>
-        <li>
-          <a class="sedona-logo">
-            <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
-          </a>
-        </li>
         <li><a href="map.html">Карта штата</a></li>
         <li class="site-navigation-current">Гостиницы</li>
       </ul>
@@ -179,6 +178,7 @@
       </a>
     </div>
   </footer>
+</div>
 </body>
 
 </html>
