--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 </head>
 
 <body>
+  <div class="container-width">
   <header class="main-header">
     <nav class="main-navigation">
+      <a class="sedona-logo">
+        <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
+      </a>
       <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
         <li><a href="materials.html">Фото и видео</a></li>
-        <li>
-          <a class="sedona-logo">
-            <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип города Седона">
-          </a>
-        </li>
         <li><a href="map.html">Карта штата</a></li>
         <li><a href="hotels.html">Гостиницы</a></li>
       </ul>
@@ -41,7 +40,7 @@
     <section class="feature-true">
       <div class="about-true">
         <h3>Настоящий городок</h3>
-        <span class="feature-number"> — №1 — </span>
+        <span class="feature-number">— №1 —</span>
         <p class="answer">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
       </div>
       <div class="image-city">
@@ -69,7 +68,7 @@
     <section class="feature-bridge">
       <div class="about-bridge">
         <h3>Там есть Мост дьявола</h3>
-        <span class="feature-number"> — №2 — </span>
+        <span class="feature-number">— №2 —</span>
         <p class="answer">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       </div>
       <div class="image-bridge">
@@ -81,17 +80,17 @@
       <ul class="features-list">
         <li>
           <h3>Небольшая площадь</h3>
-          <span class="feature-number"> — №3 — </span>
+          <span class="feature-number">— №3 —</span>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
         <li>
           <h3>Красивая дорога</h3>
-          <span class="feature-number"> — №4 — </span>
+          <span class="feature-number">— №4 —</span>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
         <li>
           <h3>Мало туристов</h3>
-          <span class="feature-number"> — №5 — </span>
+          <span class="feature-number">— №5 —</span>
           <p>Большинство едет в гранд каньон и толпится там</p>
         </li>
       </ul>
@@ -197,6 +196,7 @@
       </a>
     </div>
   </footer>
+</div>
 </body>
 
 </html>
