Внёс правки после предзащиты

--- a/hotels.html
+++ b/hotels.html
@@ -96,7 +96,7 @@
           <li class="catalog-hotel">
             <article class="card-hotel">
               <div class="container-hotel">
-                <div class="catalog-hotel-image">
+                <div class="catalog-hotel-image amara">
                   <img src="img/hotel-1.jpg" width="135" height="90" alt="Фото отеля «Amara Resort & Spa»">
                 </div>
 
@@ -122,7 +122,7 @@
           <li class="catalog-hotel">
             <article class="card-hotel">
               <div class="container-hotel">
-                <div class="catalog-hotel-image">
+                <div class="catalog-hotel-image quail-inn">
                   <img src="img/hotel-2.jpg" width="135" height="90" alt="Фото отеля «Desert Quail Inn»">
                 </div>
                 <div class="discription-hotel">
@@ -147,7 +147,7 @@
 
             <article class="card-hotel">
               <div class="container-hotel">
-                <div class="catalog-hotel-image">
+                <div class="catalog-hotel-image villas">
                   <img src="img/hotel-3.jpg" width="135" height="90" alt="Фото отеля «Villas at Poco Diablo»">
                 </div>
                 <div class="discription-hotel">
