Исправил баг в Edge
Вместо fieldset - div. Иначе Edge не видит flex.

--- a/hotels.html
+++ b/hotels.html
@@ -34,19 +34,19 @@
         <form class="detail-search-form" action="https://echo.htmlacademy.ru" method="post" oninput="start_price.value=start_range.value">
 
           <div class="container-choice-hotel">
-            <fieldset class="infrastructure">
-              <legend>Инфраструктура:</legend>
+            <div class="infrastructure">
+              <h3>Инфраструктура:</h3>
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-services" id="pool" value="pool" checked><label for="pool">Бассейн</label>
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-services" id="parking" value="parking"><label for="parking">Парковка</label>
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-services" id="wi-fi" value="wi-fi"><label for="wi-fi">Wi-fi</label>
-            </fieldset>
+            </div>
 
-            <fieldset class="type-house">
-              <legend>Тип жилья:</legend>
+            <div class="type-house">
+              <h3>Тип жилья:</h3>
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-houses" id="hotel" value="hotel" checked><label for="hotel">Гостиница</label>
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-houses" id="motel" value="motel" checked><label for="motel">Мотель</label>
               <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-houses" id="apartments" value="apartments" checked><label for="apartments">Апартаменты</label>
-            </fieldset>
+            </div>
           </div>
 
           <div class="container-price">
