--- a/hotels.html
+++ b/hotels.html
@@ -6,7 +6,7 @@
   <title>HTML Academy: Отели "Седона"</title>
   <link href="css/normalize.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
-  <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="inner-page">
@@ -36,22 +36,39 @@
           <div class="container-choice-hotel">
             <div class="infrastructure">
               <h3>Инфраструктура:</h3>
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-services" id="pool" value="pool" checked><label for="pool">Бассейн</label>
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-services" id="parking" value="parking"><label for="parking">Парковка</label>
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-services" id="wi-fi" value="wi-fi"><label for="wi-fi">Wi-fi</label>
+              <ul class="infrastructure-list">
+                <li>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-services" id="pool" value="pool" checked><label for="pool">Бассейн</label>
+                </li>
+                <li>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-services" id="parking" value="parking"><label for="parking">Парковка</label>
+                </li>
+                <li>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-services" id="wi-fi" value="wi-fi"><label for="wi-fi">Wi-fi</label>
+                </li>
+              </ul>
+
             </div>
 
             <div class="type-house">
               <h3>Тип жилья:</h3>
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-houses" id="hotel" value="hotel" checked><label for="hotel">Гостиница</label>
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-houses" id="motel" value="motel" checked><label for="motel">Мотель</label>
-              <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-houses" id="apartments" value="apartments" checked><label for="apartments">Апартаменты</label>
+              <ul class="type-house-list">
+                <li>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-houses" id="hotel" value="hotel" checked><label for="hotel">Гостиница</label>
+                </li>
+                <li>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-houses" id="motel" value="motel" checked><label for="motel">Мотель</label>
+                </li>
+                <li>
+                  <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="list-houses" id="apartments" value="apartments" checked><label for="apartments">Апартаменты</label>
+                </li>
+              </ul>
             </div>
           </div>
 
           <div class="container-price">
-            <fieldset class="price">
-              <legend>Стоимость в сутки (р):</legend>
+            <div class="price">
+              <h3>Стоимость в сутки (р):</h3>
               <div class="price-choice">
                 <label class="min-price">От <input type="text" name="min-price" value="0"></label>
                 <label class="max-price">До <input type="text" name="max-price" value="3000"></label>
@@ -63,7 +80,7 @@
                 <div class="range-toggle range-toggle-min"></div>
                 <div class="range-toggle range-toggle-max"></div>
               </div>
-            </fieldset>
+            </div>
 
             <input class="button-detail-search" type="submit" name="start-detail-search" value="Показать">
           </div>
@@ -82,9 +99,9 @@
           </ul>
         </div>
         <ul class="sorting-icons">
-          <li><a class="sorting-up"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+          <li><a class="sorting-up" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" aria-label="Сортировка от меньшего">
                 <path fill="#231F20" d="M5.5 0L0 10h11z" /></svg></a></li>
-          <li><a class="sorting-down current" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+          <li><a class="sorting-down current" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" aria-label="Сортировка от большего">
                 <path fill="#231F20" d="M5.5 10L0 0h11" /></svg></a></li>
         </ul>
       </section>
