Внёс наполнение div="background-sedona"

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
       <h1 class="visually-hidden">Добро пожаловать в город Седона</h1>
 
-      <div class="background-sedona"></div>
+      <div class="background-sedona">
+        <img src="img/intro-welcome.svg" width="459" height="353" alt="Фраза приветствия города">
+      </div>
 
       <div class="welcome-sedona">
         <h2>Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
