Внёс aria-label

--- a/hotels.html
+++ b/hotels.html
@@ -99,10 +99,10 @@
           </ul>
         </div>
         <ul class="sorting-icons">
-          <li><a class="sorting-up" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                <path fill="#231F20" d="M5.5 0L0 10h11z" />Сортировка от меньшего</svg></a></li>
-          <li><a class="sorting-down current" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
-                <path fill="#231F20" d="M5.5 10L0 0h11" />Сортировка от большего</svg></a></li>
+          <li><a class="sorting-up" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" aria-label="Сортировка от меньшего">
+                <path fill="#231F20" d="M5.5 0L0 10h11z" /></svg></a></li>
+          <li><a class="sorting-down current" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" aria-label="Сортировка от большего">
+                <path fill="#231F20" d="M5.5 10L0 0h11" /></svg></a></li>
         </ul>
       </section>
 
